--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 			/*grid-template-rows: 200px;*/
 			/*grid-template-rows: minmmax(200px, auto);*/
 			grid-template-rows: repeat(3, minmax(200px, auto));
+			grid-column-gap: 10px;
+			grid-row-gap: 10px;
 			max-width: 960px;
 			margin: 0 auto;
 		}
