--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 		#content{
 			display: grid;
 			grid-template-columns: repeat(3, 1fr);
-			/*grid-template-rows: 200px 200px 400px 200px;*/
-			/*grid-template-rows: 200px;*/
-			/*grid-template-rows: minmmax(200px, auto);*/
-			grid-template-rows: repeat(3, minmax(200px, auto));
 			grid-column-gap: 10px;
 			grid-row-gap: 10px;
 			max-width: 960px;
@@ -28,22 +24,33 @@
 			background: #f75d5d;
 			padding: 30px;
 		}
+		.sub{
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 10px;
+			grid-column: 1 / 2;
+		}
+		.sub p{
+			border: 1px solid #fff;
+			padding: 20px;
+			margin: 0;
+		}
 	</style>
 </head>
 <body>
 
 	<div id="content">
-
 		<div>1</div>
 		<div>2</div>
-		<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis delectus, cupiditate quas suscipit aspernatur officia dolorum sed sunt nostrum distinctio repellendus laborum voluptatem dolore, officiis deserunt blanditiis et eaque rerum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, ducimus illo temporibus nam architecto natus, doloribus. Reiciendis inventore quia, ut est rerum atque voluptatem omnis reprehenderit ab. Minima, culpa, atque.</div>
-		<div>4</div>
+		<div>3</div>
+		<div class="sub">
+			<p>1</p>
+			<p>2</p>
+			<p>3</p>
+			<p>4</p>
+		</div>
 		<div>5</div>
 		<div>6</div>
-		<div>7</div>
-		<div>8</div>
-		<div>9</div>
-
 	</div>
 
 </body>
